--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -30,14 +30,9 @@
   <div id="app"></div>
 
   <!-- SCRIPTS -->
-  <!--
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9.14.4/dist/sweetalert2.all.min.js"></script>
-  -->
-  <script src="./assets/jQuery/jquery-3.3.1.slim.min.js"></script>
+  <script src="./assets/js/jquery-3.3.1.slim.min.js"></script>
   <script src="./assets/bootstrap-5.0.2/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/sweetalert2/sweetalert2.all.min.js"></script>
+  <script src="./assets/js/sweetalert2.all.min.js"></script>
 
   <script type="module" src="./main.js"></script>
 </body>
